[package]
name = "mosaic_video_cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["YXL76 <chenxin.lan.76@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.10"
clap = "3.0.0-beta.5"
mosaic_video_crawler = { path = "../crawler" }
mosaic_video_diff = { path = "../diff" }

[dependencies.indicatif]
git = "https://github.com/mitsuhiko/indicatif"
features = ["improved_unicode"]