[package]
name = "video_mosaic_cli"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["YXL76 <chenxin.lan.76@gmail.com>"]
readme = "README.md"

[dependencies]
async-std = "1.10"
video_mosaic_crawler = { path = "../crawler" }
video_mosaic_diff = { path = "../diff" }

[dependencies.indicatif]
git = "https://github.com/mitsuhiko/indicatif"
features = ["improved_unicode"]
