[package]
name = "video_mosaic_crawler"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["YXL76 <chenxin.lan.76@gmail.com>"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
async-std = "1.10"
futures = "0.3"
http = "0.2.5"
mime = "0.3"
urlencoding = "2.1"

[dependencies.isahc]
version = "1.6"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
