[package]
name = "mosaic_video_diff"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["YXL76 <chenxin.lan.76@gmail.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"

[dependencies.async-std]
version = "1.10"
features = ["unstable"]

[dependencies.ffmpeg-next]
version = "4.4"
default-features = false
features = ["format", "software-scaling", "static"]

[dependencies.image]
version = "0.23"
default-features = false
features = ["jpeg", "png"] # "jpeg_rayon" may cause stack overflow

[dependencies.kmeans_colors]
git = "https://github.com/YXL76/kmeans-colors"
branch = "impl-traits-for-hsv"
default-features = false
features = ["palette_color"]

[dependencies.palette]
version = "0.6"
default-features = false
features = ["std"]
