[package]
name = "mosaic_video_gui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["YXL76 <chenxin.lan.76@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.10"
mosaic_video_crawler = { path = "../crawler" }
mosaic_video_diff = { path = "../diff" }
rfd = "0.6"

[dependencies.iced]
git = "https://github.com/iced-rs/iced"
default-features = false
features = ["wgpu", "image", "async-std"]

[dependencies.iced_native]
git = "https://github.com/iced-rs/iced"

[dependencies.image]
version = "0.23"
default-features = false
features = ["jpeg", "png"] # "jpeg_rayon" may cause stack overflow
