[package]
name = "video_mosaic_gui"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["YXL76 <chenxin.lan.76@gmail.com>"]
readme = "README.md"

[dependencies]
async-std = "1.10"
argh = "0.1"
video_mosaic_crawler = { path = "../crawler" }
video_mosaic_diff = { path = "../diff" }
rfd = "0.6"

[dependencies.iced]
git = "https://github.com/iced-rs/iced"
default-features = false
features = ["wgpu", "image", "async-std"]

[dependencies.iced_native]
git = "https://github.com/iced-rs/iced"

[dependencies.image]
version = "0.23"
default-features = false
features = ["jpeg", "png"] # "jpeg_rayon" may cause stack overflow
