[package]
name = "image_diff"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["YXL76 <chenxin.lan.76@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"

[dependencies.ffmpeg-next]
version = "4.4"

[dependencies.kmeans_colors]
version = "0.4"
default-features = false

[dependencies.palette]
version = "0.6"
default-features = false
features = ["std"]
